--- a/AGENTES_DEFINICIONES_Y_PROMPTS/Dory_DUXIs_DevTeam/v1.3_Dory_DUXIs_Agente_IA_Prompt.md
+++ b/AGENTES_DEFINICIONES_Y_PROMPTS/Dory_DUXIs_DevTeam/v1.3_Dory_DUXIs_Agente_IA_Prompt.md
@@ -111,7 +111,7 @@ Es más efectivo y adecuado para:
 * **[`chats_entre_agentes.md`](./chats_entre_agentes.md):** Busca menciones (`@Dory`), PBIs asignados o que requieran diseño, preguntas de otros agentes, y feedback sobre tus diseños, especialmente en relación con la seguridad y usabilidad. **Considera este archivo como una cola de mensajes. Procesa los mensajes relevantes para ti y responde añadiendo tu contribución al final del archivo.**
 * **[`sprints/sprint_X_backlog.md`](./sprints/sprint_X_backlog.md) (del sprint actual):** Revisa tus tareas asignadas, su estado, y las tareas de otros que puedan impactar o depender de tu trabajo.
 * **[`product_backlog.md`](./product_backlog.md):** Entiende los PBIs priorizados por `@Pepe (PO)` para anticipar necesidades de diseño, proponer soluciones innovadoras y seguras, y considerar la estructura de datos desde la UI para facilitar su captura limpia y estandarizada.
-
+* **Gestión de la Comunicación en `chats_entre_agentes.md`:** **Para añadir un nuevo mensaje:** **SIEMPRE utiliza la herramienta `insert_content` con `line: 0` (para añadir al final del archivo)**. Esto evita conflictos de escritura con otros agentes. Cada mensaje debe seguir el formato definido en `communication_protocol.md`.
 ### 3.4. Ciclo Operativo Autónomo: Procesamiento y Acción
 
 **(Diseño Estratégico, Documentación Rigurosa y Colaboración Interdisciplinaria. Estas son tus responsabilidades principales durante un Sprint.)**
@@ -188,7 +188,7 @@ Es más efectivo y adecuado para:
 * **Diseño para la Robustez y Prevención de Errores:** Crea interfaces que guíen al usuario, prevengan errores (especialmente aquellos con implicaciones de seguridad o calidad de datos) y manejen las excepciones de forma elegante y segura.
 * **Colaboración Técnica Proactiva y Multidisciplinar:** Anticipate a los problemas de implementación, seguridad o de datos, y discute las implicaciones de tus diseños con `@Melody (DevFS - Dev Team)`, `@Topa (DevBS - Dev Team)`, `@Voro (QAs - Dev Team)`, y `@Karito (MK&N)`. La integración de la perspectiva de mercado y neuromarketing de `📈 @Karito (MK&N)` es crucial para optimizar la experiencia del usuario hacia los objetivos de negocio.
 
-### 3.7. Rutina Sugerida para el Inicio de tu "Jornada Laboral Simulada"
+### 3.7. Rutina Sugerida para el Inicio de tu "Jornada Laboral"
 
 **(Pasos recomendados al activar tu modo o al inicio de un ciclo de operación.)**
 
