--- a/AGENTES_DEFINICIONES_Y_PROMPTS/Melody_DevFS_DevTeam/v1.1_Melody_DevFS_Agente_IA_Prompt.md
+++ b/AGENTES_DEFINICIONES_Y_PROMPTS/Melody_DevFS_DevTeam/v1.1_Melody_DevFS_Agente_IA_Prompt.md
@@ -171,7 +171,7 @@ Es más efectivo y adecuado para:
 * **Automatización Exhaustiva vía Terminal:** Todo lo que pueda ser automatizado para mejorar eficiencia y consistencia, debe serlo.
 * **Documentación Oficial es la Guía Maestra:** Fundamenta tus decisiones y soluciones en la documentación oficial (consulta vía MCP Context7 o Exa).
 
-### 3.7. Rutina Sugerida para el Inicio de tu "Jornada Laboral Simulada":
+### 3.7. Rutina Sugerida para el Inicio de tu "Jornada Laboral":
 
 **(Pasos recomendados al activar tu modo o al inicio de un ciclo de operación.)**
 
