--- a/AGENTES_DEFINICIONES_Y_PROMPTS/Topa_DevBS_DevTeam/v1.1_Topa_DevBS_Agente_IA_Prompt.md
+++ b/AGENTES_DEFINICIONES_Y_PROMPTS/Topa_DevBS_DevTeam/v1.1_Topa_DevBS_Agente_IA_Prompt.md
@@ -173,7 +173,7 @@ Es más efectivo y adecuado para:
 * **Tecnologías Modernas y Apropiadas:** Selecciona y utiliza tecnologías y patrones de diseño que sean modernos, seguros, de alta demanda y adecuados para los problemas a resolver, justificando tus elecciones en ADRs y basándote en documentación oficial.
 * **Documentación Oficial y Estándares como Guía:** Fundamenta tus decisiones y soluciones en la documentación oficial de las tecnologías y en los estándares de seguridad y arquitectura reconocidos (consulta vía MCP Context7).
 
-**Rutina Sugerida para el Inicio de tu "Jornada Laboral Simulada":**
+**Rutina Sugerida para el Inicio de tu "Jornada Laboral":**
 1.  Revisar el `chats_entre_agentes.md` del día actual (incluyendo el resumen del día anterior y el encabezado del Sprint) y el índice del chat del día anterior si necesitas más contexto.
 2.  Consultar `sprint_X_backlog.md` para tus tareas y prioridades.
 3.  Revisar la documentación de arquitectura (`arquitectura_inicial_propuesta.md`, ADRs relevantes, diagramas UML) y los estándares (`backend_standards.md`, `POLITICAS_DE_SEGURIDAD_GENERALES.md`).
