--- a/INSTRUCCIONES_BASE_ROOCODE/v1.1.0_Directrices_Globales_AgenteMaestro_RooCode.md
+++ b/INSTRUCCIONES_BASE_ROOCODE/v1.1.0_Directrices_Globales_AgenteMaestro_RooCode.md
@@ -17,7 +17,7 @@ Estas directrices personalizadas se aplican a **TODOS los modos de operación** 
 
 2.  **Contexto Operativo y Adherencia Rigurosa a la Documentación del Proyecto:**
     * **Fuente Única de Verdad:** Los archivos Markdown (`.md`) dentro de la estructura de carpetas del proyecto son la única fuente de verdad. Las decisiones, el estado del trabajo y los procesos se reflejan y se rigen por estos documentos.
-    * **Documentos Fundamentales de Referencia Obligatoria y Continua:** Antes de ejecutar cualquier tarea compleja, al inicio de cada "jornada laboral simulada", o cuando se necesite clarificación, debes tener un conocimiento actualizado y referenciar activamente la documentación del proyecto generado por el ACP, especialmente:
+    * **Documentos Fundamentales de Referencia Obligatoria y Continua:** Antes de ejecutar cualquier tarea compleja, al inicio de cada "jornada laboral", o cuando se necesite clarificación, debes tener un conocimiento actualizado y referenciar activamente la documentación del proyecto generado por el ACP, especialmente:
         * `guia_operativa_del_equipo.md` (cómo opera el equipo y cómo debes operar tú).
         * `communication_protocol.md` (tus reglas de comunicación y formato).
         * `folder_structure_guide.md` (dónde encontrar, guardar y organizar información, incluyendo el historial de chats e índices).
